--- a/logIn.html
+++ b/logIn.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  <title>Sign Up Form</title>
+  <title>Log In Form</title>
   <link rel="stylesheet" href="signUp.css">
   <style>
     #footer {
@@ -18,9 +18,9 @@
 
 <ul>
   <li><a href="logIn.html">Log In</a></li>
-  <li><a href="#news">Volunteering Responsibilities</a></li>
-  <li><a href="#news">Schedule</a></li>
-  <li><a href="#contact">Contact</a></li>
+  <li><a href="volunteeringResponsibilities.html">Volunteering Responsibilities</a></li>
+  <li><a href="schedule.html">Schedule</a></li>
+  <li><a href="contact.html">Contact</a></li>
   <li><a href="#news">Profile</a></li>
   <li style="float:right"><a class="active" href="#about">About</a></li>
 </ul>
@@ -34,7 +34,7 @@
       <hr>
       
       <div class="input-entries">
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <input type="email" placeholder="Enter Email" name="email" required>
       <br>
       <input type="password" placeholder="Enter Password" name="psw" required>
       <br>
