--- a/signUp.html
+++ b/signUp.html
@@ -1,40 +1,40 @@
 <!doctype html>
 <html lang="en">
   <head>
-  <title>Sign Up Form</title>
-  <link rel="stylesheet" href="signUp.css">
-  <style>
-    #footer {
-        position: fixed;
-        padding: 10px 10px 0px 10px;
-        bottom: 0;
-        width: 100%;
-        /* Height of the footer*/ 
-        height: 40px;
-        background: grey;
-    }
-</style>
-</head>
+    <title>Sign Up Form</title>
+    <link rel="stylesheet" href="signUp.css">
+    <style>
+      #footer {
+          position: fixed;
+          padding: 10px 10px 0px 10px;
+          bottom: 0;
+          width: 100%;
+          /* Height of the footer*/ 
+          height: 40px;
+          background: grey;
+      }
+    </style>
+  </head>
 
-<ul>
-  <li><a href="signUp.html">Sign Up</a></li>
-  <li><a href="#news">Volunteering Responsibilities</a></li>
-  <li><a href="#news">Schedule</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#news">Profile</a></li>
-  <li style="float:right"><a class="active" href="#about">About</a></li>
-</ul>
+  <ul>
+    <li><a href="signUp.html">Sign Up</a></li>
+    <li><a href="volunteeringResponsibilities.html">Volunteering Responsibilities</a></li>
+    <li><a href="schedule.html">Schedule</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="#news">Profile</a></li>
+    <li style="float:right"><a class="active" href="#about">About</a></li>
+  </ul>
 
-<img src="Images/armInArmLogo.jpg" alt="Arm In Arm Logo" class="center" style="width:600px;height:200px;">
+  <img src="Images/armInArmLogo.jpg" alt="Arm In Arm Logo" class="center" style="width:600px;height:200px;">
 
-  <form action="action_page.php" style="border:0px solid #ccc">
+  <form action="action_page.php" style="border:0px solid #ccc" method="post">
     <div class="sign-up-form">
     <div class="container">
-      <h2>Start Volunteering at Arm In Arm Today!</h2>
+      <h2>Start volunteering at Arm In Arm today!</h2>
       <hr>
       
       <div class="input-entries">
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <input type="email" placeholder="Enter Email" name="email" required>
       <br>
       <input type="password" placeholder="Enter Password" name="psw" required>
       <br>
@@ -43,13 +43,21 @@
       <label>
         <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
       </label>
-  
+
       <div class="clearfix">
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <button type="submit" class="signupbtn" name="signUpSubmitButton">Sign Up</button>
       </div>
       <a href="logIn.html">Already have an account?</a>
     </div>
     </div>
   </form>
   <p>Designed by members of the Output Subteam of the Princeton University Entrepreneurship Club.</p>
+
+  <div>
+    <?php
+    if (isset($_POST['signUpSubmitButton'])) {
+      echo 'User submitted.';
+    }
+    ?>
+  </div>
 </html>
