--- a/signUp.html
+++ b/signUp.html
@@ -30,7 +30,7 @@
   <form action="action_page.php" style="border:0px solid #ccc" method="post">
     <div class="sign-up-form">
     <div class="container">
-      <h2>Start volunteering at Arm In Arm today!</h2>
+      <h2>Start volunteering today!</h2>
       <hr>
       
       <div class="input-entries">
