Started adding backend logic for login pages
Added Olivia's images for later inclusion in informational pages

--- a/volunteeringResponsibilities.html
+++ b/volunteeringResponsibilities.html
@@ -36,11 +36,11 @@
 </head>
 
 <ul>
-  <li><a href="logIn.html">Log In</a></li>
+  <li id="logInTab"><a href="logIn.html">Log In</a></li>
   <li><a href="volunteeringResponsibilities.html">Volunteering Responsibilities</a></li>
   <li><a href="schedule.html">Schedule</a></li>
   <li><a href="contact.html">Contact</a></li>
-  <li><a href="#news">Profile</a></li>
+  <li id="profileTab"><a href="profile.html">Profile</a></li>
   <li style="float:right"><a class="active" href="#about">About</a></li>
 </ul>
 
