--- a/logIn.html
+++ b/logIn.html
@@ -21,34 +21,37 @@
   <li><a href="volunteeringResponsibilities.html">Volunteering Responsibilities</a></li>
   <li><a href="schedule.html">Schedule</a></li>
   <li><a href="contact.html">Contact</a></li>
-  <li><a href="#news">Profile</a></li>
   <li style="float:right"><a class="active" href="#about">About</a></li>
 </ul>
 
 <img src="Images/armInArmLogo.jpg" alt="Arm In Arm Logo" class="center" style="width:600px;height:200px;">
 
-  <form action="action_page.php" style="border:0px solid #ccc">
+  <form style="border:0px solid #ccc">
     <div class="sign-up-form">
     <div class="container">
       <h2>Schedule your next volunteering event!</h2>
       <hr>
       
       <div class="input-entries">
-      <input type="email" placeholder="Enter Email" name="email" required>
+      <input type="email" placeholder="Enter Email" name="email" id="email" required>
       <br>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <input type="password" placeholder="Enter Password" name="psw" id="password" required>
       <br>
       </div>
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
+      <div>
+        <div style="display:inline-block">
+          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:1em">
+        </div>
+        <div style="display:inline-block;margin-left:0.5em;font-family:sans-serif">Remember me</div>
+      </div>
   
       <div class="clearfix">
-        <button type="submit" class="signupbtn">Log In</button>
+        <button id="logInButton" onclick="handleSubmitBtnClick()">Log In</button>
       </div>
       <a href="signUp.html">Don't have an account yet?</a>
     </div>
     </div>
   </form>
   <p>Designed by members of the Output Subteam of the Princeton University Entrepreneurship Club.</p>
+  <script src="logIn.js"></script>
 </html>
