--- a/signUp.html
+++ b/signUp.html
@@ -17,7 +17,7 @@
   </head>
 
   <ul>
-    <li><a href="signUp.html">Sign Up</a></li>
+    <li><a href="logIn.html">Log In</a></li>
     <li><a href="volunteeringResponsibilities.html">Volunteering Responsibilities</a></li>
     <li><a href="schedule.html">Schedule</a></li>
     <li><a href="contact.html">Contact</a></li>
@@ -41,9 +41,12 @@
         <input type="password" placeholder="Confirm Password" name="psw-repeat" required>
       </div>
 
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
+      <div>
+        <div style="display:inline-block">
+          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:1em">
+        </div>
+        <div style="display:inline-block;margin-left:0.5em;font-family:sans-serif">Remember me</div>
+      </div>
 
       <div class="clearfix">
         <button type="submit" class="signupbtn" name="signUpSubmitButton">Sign Up</button>
